Importing https://archive.codeplex.com/?p=healthvaultjavalib for R1.4.0